# healthchat

./: .gitignore  .windsurfrules  README.md
backend/: Dockerfile  README.md  fly.toml  pyproject.toml
backend/healthchat/: config.py  main.py
backend/healthchat/agents/: audio_agent.py
backend/healthchat/ws/: chat_socket.py
frontend/: package-lock.json  package.json
frontend/src/routes/: +page.svelte
