[tool.poetry]
name = "healthchat-backend"
version = "0.1.0"
description = ""
authors = ["nwilson314 <nsw.wilson@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["all"], version = "^0.115.13"}
loguru = "^0.7.3"
python-dotenv = "^1.1.0"
pydantic-settings = "^2.10.0"
openai = "^1.90.0"
websockets = "^15.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
